tests/resource/valid/function/call_simple_function_class.mamba
class A
    def (a, b): (Int, Int) := (10, 100)


def a := A()
print(a.a)
print(a.b)
