tests/resource/invalid/type/definition/non_mutable_in_call_chain.mamba
class A
    def mut b: B <- B()

class B
    def c: C <- C()

class C
    def mut d: D <- D()

class D
    def mut e: Int <- 100

def mut a <- A()
a.b.c.d.e <- 20
